--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen": "graphql-codegen --config codegen.yml"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.2.0",
+    "@graphql-codegen/typescript": "2.2.2",
+    "@graphql-codegen/typescript-operations": "2.1.4",
+    "@graphql-codegen/typescript-urql": "^3.2.0",
     "@types/react": "^17.0.24",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2"
@@ -19,9 +24,11 @@
     "@emotion/styled": "^11.3.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
+    "graphql": "^15.6.0",
     "next": "^11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.42.1"
+    "sass": "^1.42.1",
+    "urql": "^2.0.5"
   }
 }
